# apertium-tam-eng

./: Makefile.am  README  README.md  apertium-tam-eng.eng-tam.rtx  apertium-tam-eng.tam-eng.dix  configure.ac  modes.xml
test/: eng-tam-biltrans-expected.txt  eng-tam-disam-expected.txt  eng-tam-generator-expected.txt  eng-tam-input.txt  eng-tam-morph-expected.txt  eng-tam-pretransfer-expected.txt  eng-tam-transfer-expected.txt  tam-eng-disam-expected.txt  tam-eng-input.txt  tam-eng-lex-expected.txt  tam-eng-postgen-expected.txt  tam-eng-tagger-expected.txt  tam-eng-transfer-expected.txt  tests.json
